--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -3,3 +3,7 @@
 @use './typography';
 
 
+@use "components/shelf-selector.scss";
+@use "components/button.scss";
+@use "components/search_input.scss";
+@use "sections/header.scss";
