--- a/src/styles/scss/components/search_input.scss
+++ b/src/styles/scss/components/search_input.scss
@@ -8,6 +8,11 @@
   border-radius: 4px;
   border: 1px solid transparent;
   transition: all .3s ease-in-out;
+  width: 100%;
+  @media screen and (min-width: 640px) {
+    width: unset;
+  }
+  cursor: text;
   &.focused {
     border: 1px solid color.$indigo-500;
   }
