--- a/src/styles/scss/components/shelf-selector.scss
+++ b/src/styles/scss/components/shelf-selector.scss
@@ -25,7 +25,7 @@
                 padding-bottom: 14px;
             }
         }
-        &.readed-option {
+        &.finished-read-option {
             flex-basis: 41.666%;
             @media screen and (min-width: 414px) {
                 flex-basis: 50%;
@@ -35,7 +35,7 @@
                 color: color.$white;
             }
         }
-        &.unreaded-option {
+        &.unfinished-read-option {
             flex-grow: 1;
             [name=shelf-selector]:checked ~ div {
                 background-color: color.$indigo-500;
