--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -29,6 +29,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  gap: 16px;
   align-items: center;
   padding-top: 32px;
   padding-left: 28px;
@@ -38,5 +39,31 @@ main,
 header,
 footer {
   width: 100%;
-  max-width: 640px;
+  max-width: 900px;
+}
+main {
+  flex-grow: 1;
+  background-color: transparent;
+  overflow-y: auto;
+  padding-right: 8px;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: rgba(color.$gray-500, 0.15);
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: color.$gray-500;
+    border-radius: 16px;
+    max-height: 24px;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: color.$gray-600;
+  }
 }
