--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -332,21 +333,6 @@ button {
   user-select: none;
 }
 
-@font-face {
-  font-family: "Nunito";
-  src: url("../../fonts/Nunito-Light.ttf");
-  font-weight: 300;
-}
-@font-face {
-  font-family: "Nunito";
-  src: url("../../fonts/Nunito-Regular.ttf");
-  font-weight: 400;
-}
-@font-face {
-  font-family: "Nunito";
-  src: url("../../fonts/Nunito-SemiBold.ttf");
-  font-weight: 600;
-}
 * {
   scroll-behavior: smooth;
   box-sizing: border-box;
