--- a/src/styles/scss/components/search_input.scss
+++ b/src/styles/scss/components/search_input.scss
@@ -21,6 +21,7 @@
     cursor: text;
     font-size: 14px;
     flex-grow: 1;
+    background-color: transparent;
     @media screen and (min-width: 500px) {
       font-size: 16px;
     }
